--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -12,7 +12,7 @@
 
 			<div class="col-md-3">
 				<a href="/books/<%= book.id %>">
-					<%= image_tag book.book_img.url(:book_index), class: "book" %>
+					<%= image_tag book.book_img.url(:medium), class: "book" %>
 				</a>
 			</div>	
 
