--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,7 +2,7 @@
 
 	<div class="col-md-4">
 
-		<%= image_tag @book.book_img.url(:book_show), class: "book-show" %>
+		<%= image_tag @book.book_img.url(:thumb), class: "book-show" %>
 
 	</div>
 
